--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ html {
 main {
   max-width: 50rem;
   margin: 2rem auto;
-  background: linear-gradient(180deg, #56b6c2, dodgerblue);
+  background: linear-gradient(180deg,gray, black);
   padding: 3rem 1.6rem 6rem 1.6rem;
   border-radius: 4rem;
   box-shadow: 0 2px 2px lightgray;
@@ -15,6 +15,7 @@ main {
 
 h1 {
   text-align: center;
+  color: white;
   font-size: 3rem;
   margin: 0;
   padding-bottom: 3rem;
@@ -73,7 +74,8 @@ input[type="number"] {
   background: #eee;
   margin-top: 1.2rem;
   border-radius: 0.4rem;
-  outline-color: rgba(0,0,255,.2);
+  outline-color: lightgray;
+  z-index: 0;
 }
 
 .range::-webkit-slider-thumb {
@@ -82,6 +84,7 @@ input[type="number"] {
   height: 2.2rem;
   border-radius: 50%;
   box-shadow: inset 0 0 2px rgba(0,0,255,.5);
-  background-color: #56b6c2;
+  background-color: black;
+ 
   cursor: pointer;
 }
